2003-01-28  Terry Biggs <tbiggs@users.sf.net>

	* revomed toolbar from commentary pane put
	  all option in popup menu.
	* added same popup menu to commentary dialog

2003-01-24  Terry Biggs <tbiggs@users.sf.net>

	* revomed toolbar from Bible text pane put
	  all option in popup menu.
	* added same popup menu to Bible text dialog

2003-01-22  Terry Biggs <tbiggs@users.sf.net>
	
	* removed strip_words_in_red() from 
	  gnome/gtkhtml_display.c
	* added "Red letter words" to module global options
	  toolbar for modules that have words of Christ in red
	* fixed to work with gtkhtml-1.1


2003-01-10  Terry Biggs <tbiggs@users.sourceforge.net>

	* added strip_words_in_red() to gnome/gtkhtml_display.c
	* made bibletext_dialog nav toolbar look like main nav toolbar

2002-12-28  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gui/_editor.h to gui/editor.h
	* renamed gnome/_editor.c to gnome/editor.c
	

2002-12-23  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed gui/editor_toolbar.h and gnome/editor_toolbar.c
	* added gui/toolbar_style.h and gui/toolbar_edit.h
	* added gnome/toolbar_style.c and gnome/toolbar_edit.c
	* added menu items to editors to toggle toolbars on and off



2002-12-21  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved editors from upper workbook to lower workbook
	

2002-12-21  Terry Biggs <tbiggs@users.sourceforge.net>

	* added gnome/font_dialog.c and gui/font_dialog.h
	* added backend/module_fonts.cpp and backend/module_fonts.h


2002-10-31  Terry Biggs <tbiggs@users.sourceforge.net>

	* updated to use sword-1.5.5


2002-10-19  Terry Biggs <tbiggs@users.sourceforge.net>

	* added gnome/find_dialog.c and gui/find_dialog.h
	* removed gnome/commentary_find.c and gui/commentary_find.h
	* removed gnome/gbs_find.c and gui/gbs_find.h
	* removed gui/find_dlg.defs.h


2002-10-18  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed gnome/link_dialog.c and gui/link_dialog.h


2002-10-08  Terry Biggs <tbiggs@users.sourceforge.net>
